<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EventType" Id="{be147596-cecc-4284-a575-1bd7f93ad292}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}

TYPE E_EventType  :
(
	Alarm := 0,
	Message := 1 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>